# xrdp-fork

./: .cirrus.yml  .gitignore  Makefile.am  configure.ac
.github/workflows/: build.yml
common/: Makefile.am  list.c  os_calls.c  os_calls.h  parse.c  string_calls.c  trans.c  xrdp_client_info.h
docs/man/: xrdp.ini.5.in
fontutils/: fv1.c
genkeymap/: genkeymap.c
keygen/: Makefile.am
libxrdp/: libxrdp.c  libxrdpinc.h  xrdp_rdp.c  xrdp_sec.c
neutrinordp/: xrdp-neutrinordp.c  xrdp-neutrinordp.h
scripts/: install_xrdp_build_dependencies_with_apt.sh
sesman/: Makefile.am  scp_process.c  sesman.ini.in
sesman/chansrv/: audin.c  chansrv.c  chansrv_common.c  clipboard.c  clipboard_file.c  devredir.c  (+2 more)
vnc/: vnc.c  vnc.h
xorgxrdp_helper/: Makefile.am  xorgxrdp_helper.c  xorgxrdp_helper.h  xorgxrdp_helper_nvenc.c  xorgxrdp_helper_shaders.c  xorgxrdp_helper_x11.c
xrdp/: Makefile.am  xrdp.h  xrdp.ini.in  xrdp_egfx.c  xrdp_egfx.h  xrdp_encoder.c  xrdp_encoder.h  xrdp_encoder_nvenc.c  xrdp_encoder_openh264.c  xrdp_encoder_openh264.h  xrdp_encoder_x264.c  xrdp_encoder_x264.h  xrdp_listen.c  xrdp_mm.c  xrdp_painter.c  xrdp_types.h  xrdp_wm.c
xrdp_accel_assist/: Makefile.am  xrdp_accel_assist.c  xrdp_accel_assist.h  xrdp_accel_assist_egl.c  xrdp_accel_assist_egl.h  xrdp_accel_assist_glx.c  xrdp_accel_assist_glx.h  xrdp_accel_assist_nvenc.c  xrdp_accel_assist_nvenc.h  xrdp_accel_assist_shaders.c  xrdp_accel_assist_x11.c  xrdp_accel_assist_x11.h
xrdp_accel_assist/encoder_headers/: nvEncodeAPI_11_0.h  nvEncodeAPI_11_1.h
xrdpapi/: xrdpapi.c
xup/: xup.c  xup.h
(+2 files in other folders)
